crates/zeek-websocket-derive/tests/enum-fail.stderr
error: only structs can derive ZeekType
 --> tests/enum-fail.rs:4:1
  |
4 | enum E {
  | ^^^^
