crates/zeek-websocket-derive/tests/enum-fail.rs
use zeek_websocket_derive::ZeekType;

#[derive(ZeekType)]
enum E {
    A,
    B,
    C,
}

fn main() {}
